fix: scrollbar transparent

--- a/app.css
+++ b/app.css
@@ -3,20 +3,37 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
-    color: #fff;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 100%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     background: url(img/bgnature.webp) no-repeat center center fixed;
     background-size: cover;
     overflow-x: hidden;
+    min-height: 100vh;
+}
+
+::-webkit-scrollbar {
+    width: 7.5px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.5);
 }
 
 main {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,17 +83,17 @@ header > h1 {
     border-radius: 1em;
     background-color: #000a;
     color: #fff;
-    padding: 0.3em 0.6em 0.3em 0.6em;
+    padding: 0.3em 0.6em;
     border: 1px solid #fffa;
     backdrop-filter: blur(10px) saturate(160%) contrast(180%);
     -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 }
 
 header > h2 {
-    display: inline-block;
+    max-width: 400px;
     position: relative;
     font-size: 0.9em;
-    font-weight: 600;
+    font-weight: 500;
     padding: 0.4em 0.6em;
     margin: 0;
     color: #fff;
@@ -98,10 +115,17 @@ header > h2 > span {
 
 header > p {
     display: inline-block;
-    font-size: 0.65em;
+    font-size: 0.7em;
     font-weight: bold;
-    margin-top: 7px;
-    padding: 0 0.6em;
+    margin-top: 11px;
+    padding: 1em 0 0.6 0em;
+    color: #000a;
+    border-radius: 1em;
+    background-color: #fffa;
+    padding: 0.3em 0.6em;
+    border: 1px solid #000a;
+    backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 }
 
 ul {
@@ -153,12 +177,14 @@ footer {
 
 .created {
     display: flex;
+    color: #fff;
+    font-size: 0.75em;
 }
 
 .created img {
-    margin-top: 16px;
-    margin-left: 7px;
-    border-radius: 5px;
+    margin-top: 13.3px;
+    margin-left: 5px;
+    border-radius: 3px;
 }
 
 .cta {
